# NeoClient

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  main.cpp
client/: Cargo.toml
client/src/: buffer.rs  channels.rs  client.rs  client_impl.rs  compression.rs  compressor.rs  frame.rs  ipc.rs  lib.rs  net.rs  prelude.rs  proxy_impl.rs  reader.rs  session.rs  types.rs  wrapper.rs
client/src/tcp/: consumer.rs  factory.rs  mod.rs  producer.rs  runner.rs
client/src/tcp/pipeline/: mod.rs
client/src/tcp/proxy/: clients.rs  frame.rs  listener.rs  mod.rs
idpool/: Cargo.toml
idpool/src/: lib.rs
neogrok-codec/: Cargo.toml
neogrok-codec/protocol/: Cargo.toml
neogrok-codec/protocol/src/: deserializer.rs  ext.rs  frame.rs  lib.rs  numeric.rs  prelude.rs  serializer.rs
neogrok-codec/src/: lib.rs  reader.rs  side.rs  unsafe_buffer.rs  writer.rs
neoproto/: Cargo.toml
neoproto/src/: lib.rs  meta.rs  pool.rs  prelude.rs  serializer.rs
pipeline/: Cargo.toml
pipeline/src/: consumer.rs  ext.rs  factory.rs  lib.rs  pair.rs  producer.rs
pipeline/src/tcp/: connector.rs  listener.rs  mod.rs  prelude.rs
src/: main.rs
src/loop/: loop.cpp  loop.hpp
zstd-wrapper/: Cargo.toml
zstd-wrapper/src/: cctx.rs  dctx.rs  lib.rs  params.rs  prelude.rs
