[package]
name = "neogrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread"] }

num_cpus = "1.13.1"

client = { path = "client" }
anyhow = "1.0.57"
pretty_env_logger = "0.4.0"
