[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
neoproto = { path = "../neoproto" }

zstd-sys = "1.6.2+zstd.1.5.1"
async-trait = "0.1.52"
