[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
neogrok-codec = { git = "https://git.nerodono.su/NeoGrok/neogrok-codec.git" }
pipeline = { git = "https://git.nerodono.su/NeoGrok/pipeline.git" }
tokio = { version = "1.18.2", features = ["net", "rt", "sync", "macros"] }
