[package]
name = "client"
version = "1.0.0-release"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
log = "0.4.17"

neogrok-codec = { git = "https://git.nerodono.su/NeoGrok/neogrok-codec.git" }
pipeline = { git = "https://git.nerodono.su/NeoGrok/pipeline.git" }
idpool = { git = "https://git.nerodono.su/NeoGrok/idpool.git" }

tokio = { version = "1.19.2", features = ["net", "rt", "sync", "macros"] }
rustc-hash = "1.1.0"
