[package]
name = "neogrok-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["net", "io-util"] }
protocol = { path = "protocol" }

zstd-wrapper = { path = "../zstd-wrapper" }
